# test-nb

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: build.yaml  lint.yaml  test.yaml  typecheck.yaml
src/test_nb/: models.py  parse.py  run.py  utils.py
src/test_nb/cli/: __init__.py  app.py  commands.py  options.py
test_notebooks/: normal.ipynb  with_bash.ipynb  with_env.ipynb
test_notebooks/nested/: not_a_notebook.txt  notebook.ipynb
tests/e2e/: test_cli.py  test_run.py
tests/unit/: test_parse.py  test_utils.py
