[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-nb"
version = "0.1.1"
description = "Custom utilities to convert notebooks to python files and test them"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "click>=8.3.0",
    "termcolor>=3.2.0",
]

[tool.hatch.build.targets.wheel]
only-include = ["src/test_nb"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]

[project.scripts]
nb = "test_nb.main:main"
